<resources>
    <string name="app_name">Netstack Tool</string>
    <string name="action_settings">Settings</string>
    <string name="action_dns">DNS</string>
    <string name="action_ping">Ping</string>
    <string name="action_ps">Port Scanner</string>
    <string name="action_bgp">BGP</string>
    <string name="action_monitor">Monitor Server</string>
    <string name="action_netinfo">Network Info</string>
    <string name="action_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
