<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="in.netstack.netstacktool.netstack">
    <item
    android:id="@+id/action_settings"
    android:orderInCategory="1"
    android:title="@string/action_settings"
    app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_ping"
        android:orderInCategory="2"
        android:title="@string/action_ping"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_dns"
        android:orderInCategory="3"
        android:title="@string/action_dns"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_ssl"
        android:orderInCategory="4"
        android:title="@string/action_ssl"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bgp"
        android:orderInCategory="5"
        android:title="@string/action_bgp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_monitor"
        android:orderInCategory="6"
        android:title="@string/action_monitor"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_history"
        android:orderInCategory="6"
        android:title="@string/action_history"
        app:showAsAction="never"/>
</menu>
